Fixed Padding issue / Fixed container overflow

--- a/src/layouts/theme.scss
+++ b/src/layouts/theme.scss
@@ -10,7 +10,7 @@ $md-tertiary-color: #fff;
 }
 
 .main-container {
-  padding-top: 94vh;
+  padding-top: 95vh;
   transition: all 0.8s ease-in-out;
 
   .display-4 {
